<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="AirValveSimSignals" Id="{1648938a-3e4c-4c26-959c-5dff2b5f3772}">
    <Declaration><![CDATA[TYPE AirValveSimSignals :
STRUCT 	
	ExtendCmd 		: 	BOOL;
	ExtendFeedback 	: 	BOOL;
	RetractCmd 		: 	BOOL;
	RetractFeedback : 	BOOL;
	SequenceStatus 	: 	INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>